--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
 
-    <link href="css/style.css" rel="stylesheet">
-    <link media="print" href="css/print.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" content="public">
+    <link media="print" href="css/print.css" rel="stylesheet" content="public">
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
